Changed the timeline functionality to add a timeline when h2 is clicked. Currently only works with tweet updates, disabled, though: next step is to squash that bug.

--- a/main.css
+++ b/main.css
@@ -62,10 +62,6 @@ section {
   padding: 7px;
 }
 
-ul {
-  display: none;
-}
-
 h2,p,h4 {
   display: inline-block;
   padding-right: 0.5em;
